# beam-python-example

./: README.md  docker-compose.yml  forward-flink.sh  pyproject.toml  start-kube.sh  stop-kube.sh
beam_python_poc/: beam_example.py  kafka_example.py  kafka_test.py  lorem.txt  main.py  test_kafka_consumer.py
flink_config/: flink-configuration-configmap.yaml  jobmanager-session-deployment.yaml  taskmanager-session-deployment.yaml
